<resources>
    <string name="app_name">Mobile Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="subscription">Subscription</string>
    <string name="classes">Classes</string>

    <!--Zhi Wei-->
    <string name="str_subscription">Subscription</string>
    <string name="basic"><b>Basic</b></string>
    <string name="basic_price">RM<b>88</b> / month</string>
    <string name="basic_description1">- Able to open up to <b>5 classes</b></string>
    <string name="basic_description2">- Get started with <b>rating and comment</b> function</string>
    <string name="select_plan">Choose Plan →</string>
    <string name="premium"><b>Premium</b></string>
    <string name="premium_price">RM<b>188</b> / month</string>
    <string name="premium_description1">- Able to open up to <b>unlimited classes</b></string>
    <string name="premium_description2">- Get started with <b>assign task</b> function</string>
    <string name="premium_description3">- Able to conduct <b>premium class</b></string>
    <string name="premium_description4">- Included <b>all the features</b> in Basic plan</string>

    <string name="checkout">Checkout</string>
    <string name="card_information"><b>Card Information</b></string>
    <string name="card_number">16-Digits Card Number</string>
    <string name="card_hint">Full Name</string>
    <string name="card_hint2">XXXX</string>
    <string name="card_hint3">MM</string>
    <string name="card_hint4">CVV</string>
    <string name="card_hint5">YY</string>
    <string name="card_remember">Remember this card</string>
    <string name="save_card">Save Card</string>
    <string name="continue_str">Continue</string>
    <string name="payment_method">Payment Method</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_payment"><b>Total payment</b></string>
    <string name="order_complete">Order Completed</string>
    <string name="thankYou"><b>Thanks for subscribing to our plan</b></string>
    <string name="add_card">Visa/Debit Card</string>

    <string-array name="plan_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="pay_method">
        <item>Visa/Debit Card</item>
        <item>Cash</item>
    </string-array>

    <string name="login">Login</string>
    <string name="select_month">Month</string>
    <string name="total">Total</string>
    <string name="findyourcoachplan">Find Your Coach Plan</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="calculate">Calculate</string>

    <!--Min Xuan -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_text">Login</string>
    <string name="userHint">User Name</string>
    <string name="passHint">Password</string>
    <string name="rememberMe">RememberMe</string>
    <string name="forgetP">Forget your password?</string>
    <string name="signInButton">Sign In</string>
    <string name="alternative">Or Connect With:</string>
    <string name="signUpText">Not a member? Sign Up Here</string>
    <string name="backToLogin">Back</string>
    <string name="forgetPass">Forget your password?</string>
    <string name="emailText">Please enter your email to reset your password</string>
    <string name="emailHint">Email address</string>
    <string name="sendLink">Verify</string>
    <string name="signUpForget">Not a member? Sign Up</string>
    <string name="resetText">Reset your password</string>
    <string name="newpassHint">New password</string>
    <string name="conNewPassHint">Confirm new password</string>
    <string name="submitNewPass">Submit</string>
    <string name="faqView">FAQs</string>
    <string name="aboutMeHint">About yourself</string>
    <string name="aboutMeTitle">Bio</string>
    <string name="editBio">Enter your bio</string>
    <string name="signOutText">Sign Out</string>
    <string name="userNameHint">User Name</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="heightHint">Height (CM)</string>
    <string name="weightHint">Weight (KG)</string>
    <string name="confirmPassHint">Confirm password</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="alrMemberText">Already a member? Sign In here</string>
    <string name="certificate">Please fill in the form</string>
    <string name="submitCertButton">Submit</string>
    <string name="editNewEmail">Enter new email</string>
    <string name="editPhone">Enter your new phone number</string>
    <string name="editHeight">New height</string>
    <string name="editWeight">New weight</string>
    <string name="editPassword">Enter your new password</string>
    <string name="confirmEditPass">Confirm your new password</string>
    <string name="goToEdit">Edit Profile</string>
    <string-array name="Sport">
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Swimming</item>
        <item>GYM</item>
    </string-array>
    <string-array name="yearOfExperience">
        <item>1-2</item>
        <item>3-4</item>
        <item>More than 4</item>
    </string-array>

    <!--Seng Tian-->
    <string name="sendrating">Send Rating</string>
    <string name="cancelrating">Cancel</string>
    <string name="verydisatisfied">Very Dissatisfied</string>
    <string name="homeBtn">Home</string>


    <string name="trainingname">Training Name</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="upload">Upload</string>
    <string name="set">Set</string>
    <string name="receipt">Receipt</string>
    <string name="jobText">Your profession</string>
    <string name="year">Year of experirence</string>
    <string name="addCert">Add Cert</string>
    <string name="payment_reminder">Please pay at your nearest convenient store. Thank you.</string>


    <!--Weihao-->
    <string-array name="TrainingDay">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="TrainingTime">
        <item>8:00am - 10:00am</item>
        <item>10:00am - 12:00pm</item>
        <item>1:00pm - 3:00pm</item>
        <item>3:00pm - 5:00pm</item>
        <item>5:00pm - 7:00pm</item>
        <item>7:00pm - 9:00pm</item>
    </string-array>
</resources>