<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_classes"
        android:icon="@drawable/ic_baseline_class_24"
        android:title="@string/classes" />
    <item
        android:id="@+id/nav_subscription"
        android:icon="@drawable/ic_baseline_verified_user_24"
        android:title="@string/subscription" />
    <item
        android:id="@+id/nav_assignTask"
        android:icon="@drawable/ic_baseline_add_task_24"
        android:title="Assign Task" />
</menu>