<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.SignUp"
    android:background="@drawable/container"
    >

    <ImageView
        android:id="@+id/uploadProfilePic"
        android:layout_width="106dp"
        android:layout_height="107dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/userNameHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadProfilePic" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEnter" />

    <EditText
        android:id="@+id/enterPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phoneNumberHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <EditText
        android:id="@+id/enterHeight"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#32ffffff"
        android:ems="10"
        android:hint="@string/heightHint"
        android:inputType="textPersonName"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumber" />

    <EditText
        android:id="@+id/enterWeight"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:ems="10"
        android:hint="@string/weightHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumber"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumber" />

    <EditText
        android:id="@+id/confirmUserPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirmPassHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmUserPass"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/alrMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/alrMemberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        android:textColor="@color/black"
        android:backgroundTint="#00000000"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>
